<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Prayer Jar</string>
    <string name="tag">Tag :</string>
    <string name="app_new_item">New Prayer</string>
    <string name="app_view_item">Prayer</string>
    <string name="hello_world">Hello World!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">Prayer Jar</string>
    <string name="logo">Logo</string>
    <string name="how_it_works">How it works?</string>
    <string name="start_now">Start now</string>
    <string name="video_tutorials">Video Tutorials</string>
    <string name="slide_show">Slide Show</string>
    <string name="back">Back</string>
    <string name="title_activity_how_to">How To Use</string>
    <string name="options">Options</string>
    <string name="alert">Alert</string>
    <string name="on">On</string>
    <string name="off">Off</string>
    <string name="alert_tone">Tone</string>
    <string name="alert_time">Alert time</string>
    <string name="dummy_time">8.15am</string>
    <string name="display_countdown">Display countdown</string>
    <string name="display_shortcut_tags">Display tags</string>
    <string name="customize_tags">Customize tags</string>
    <string name="save_exit">Save and exit</string>
    <string name="save">Save</string>
    <string name="exit">Exit</string>
    <string name="next">Next</string>
    <string name="close">Close</string>
    <string name="ok">Continue</string>
    <string name="add">Add</string>
    <string name="modify">Modify</string>
    <string name="tags">Tags</string>
    <string name="school">School</string>
    <string name="work">Work</string>
    <string name="family">Family</string>
    <string name="i_pray">I pray:</string>
    <string name="help">Help</string>
    <string name="tags:">Tags:</string>
    <string name="school_work_family">School Work Family</string>
    <string name="i_am_thankful">I am thankful:</string>
    <string name="countdown_timer">Countdown Timer</string>
    <string name="sometimes">Sometimes with the fast pace of life, we forget how much God works in our lives and the things He has done to help us.</string>
    <string name="the_prayer_jar_was_created">The prayer jar was created as a way for you to save your prayers.</string>
    <string name="later_you_will">Later you will be able to read the prayers you saved and reflect on how God has worked in your life. </string>
    <string name="each_day_you">Each day you are given the opportunity to save.</string>
    <string name="you_can_set">You can set an alert to remind you to add to the jar.</string>
    <string name="what_time_would">What time would you like to set the notification?</string>
    <string name="once_you_save">Once you save your prayer, you cannot go back and change it, or even view it. \n\nIf you put it in the jar, it stays in the jar.</string>
    <string name="you_will_be_able">You will be able to open the jar when a year has passed</string>
    <string name="set_up_complete">Set up is complete!</string>
    <string name ="jar">Jar</string>
    <string name ="settings">Settings</string>
    <string name ="type_prayer_here">Type prayer here</string>
    <string name ="answered_prayers">Answered Prayers</string>
    <string name ="prayer_requests">Prayer requests</string>
    <string name ="remaining_days">0</string>
    

    <color name="blue">#0099CC</color>

    <string name="title_activity_main_screen">MainScreenActivity</string>
    <string name="title_activity_sample">Sample</string>

    <color name="silver">#303030</color>

    <string name="image">image</string>

    <string-array name="tags">
        <item>Petition</item>
        <item>Thanksgiving</item>
        <item>Adoration</item>
        <item>Expiation</item>
        <item>Love</item>
    </string-array>

    <string name="title_activity_prayer">PrayerActivity</string>
    <string name="title_activity_start_screen">StartScreen</string>
    <string name="title_activity_sreen_one">SreenOne</string>
    <string name="title_activity_screen_two">ScreenTwo</string>
    <string name="title_activity_screen_three">ScreenThree</string>
    <string name="title_activity_screen_four">ScreenFour</string>
    <string name="title_activity_screen_five">ScreenFive</string>
    <string name="title_activity_screen_six">ScreenSix</string>
    <string name="title_activity_main_screen_v2">MainScreenV2</string>

</resources>