<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/linearLayout1"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center_vertical"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/viewVideo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/video_tutorials" 
        android:layout_margin="15dp"
        android:layout_gravity="center"/>
    	
    <TextView
        android:id="@+id/viewSlide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/slide_show"
        android:layout_margin="15dp"
        android:layout_gravity="center" />

    <TextView
        android:id="@+id/viewBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="15dp"
        android:text="@string/back" />
    
</LinearLayout>

