<?xml version="1.0" encoding="utf-8"?>
   <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
       android:layout_width="fill_parent"
       android:layout_height="fill_parent"
        android:padding="10dp"
       android:orientation="vertical"
      >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" 
        android:orientation="vertical">

       <TextView
           android:id="@+id/textView1"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_gravity="center_horizontal"
           android:drawableTop="@drawable/ic_launcher"
           android:padding="10dp"
           android:text="@string/options" />

         <View
    android:layout_width="fill_parent"
    android:layout_height="0.3dp"
    android:layout_marginTop="10dp"
     android:layout_marginBottom="10dp"
   android:background="@color/silver"/>

       <RelativeLayout
           android:layout_width="fill_parent"
           android:layout_height="wrap_content"
           android:orientation="horizontal"
           android:padding="2dp" >

           <ToggleButton
               android:id="@+id/checkBox1"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_alignParentRight="true"
               android:text="@string/alert" />

           <TextView
               android:id="@+id/textView2"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_alignParentLeft="true"
               android:layout_centerVertical="true"
               android:text="@string/alert"
               android:textAppearance="?android:attr/textAppearanceMedium" />
       </RelativeLayout>
       
 <View
    android:layout_width="fill_parent"
    android:layout_height="0.3dp"
    android:layout_marginTop="10dp"
     android:layout_marginBottom="10dp"
    android:background="@color/silver"/>
       <RelativeLayout 
           	android:layout_width="fill_parent"
			android:layout_height="wrap_content"
       		android:orientation="horizontal"
           >
        <Button
            android:id="@+id/btnTime"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="59dp"
            android:layout_height="44dp"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:text="@string/modify" />

        <TextView
            android:id="@+id/viewAlert"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:text="@string/alert_time"
            android:textAppearance="?android:attr/textAppearanceMedium" />  
        </RelativeLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

<TextView
            android:id="@+id/lblTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dummy_time"
          
           android:textColor="@color/blue"
            android:textAppearance="?android:attr/textAppearanceMedium" /></LinearLayout>
            
 <View
    android:layout_width="fill_parent"
    android:layout_height="0.3dp"
    android:layout_marginTop="10dp"
     android:layout_marginBottom="10dp"
    android:background="@color/silver"/>
       
       <RelativeLayout 
           	android:layout_width="fill_parent"
			android:layout_height="wrap_content"
       		android:orientation="horizontal"
           >

         <ToggleButton
             android:id="@+id/radioButton2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentRight="true"
             android:layout_alignParentTop="true" />

         <TextView
             android:id="@+id/textView10"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentLeft="true"
             android:layout_centerVertical="true"
             android:text="@string/display_countdown"
             android:textAppearance="?android:attr/textAppearanceMedium" />

        </RelativeLayout>
         <View
    android:layout_width="fill_parent"
    android:layout_height="0.3dp"
    android:layout_marginTop="10dp"
     android:layout_marginBottom="10dp"
    android:background="@color/silver"/>
         <RelativeLayout 
           	android:layout_width="fill_parent"
			android:layout_height="wrap_content"
       		android:orientation="horizontal"
           >

         <Button
             android:id="@+id/button4"
             style="?android:attr/buttonStyleSmall"
             android:layout_width="59dp"
             android:layout_height="44dp"
             android:layout_alignParentRight="true"
             android:layout_alignParentTop="true"
             android:paddingLeft="10dp"
             android:text="@string/add" />

         <TextView
             android:id="@+id/textView7"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentLeft="true"
             android:layout_centerVertical="true"
             android:text="@string/customize_tags"
             android:textAppearance="?android:attr/textAppearanceMedium" />

        </RelativeLayout>
         <View
    android:layout_width="fill_parent"
    android:layout_height="0.3dp"
    android:layout_marginTop="10dp"
     android:layout_marginBottom="10dp"
    android:background="@color/silver"/>

       <LinearLayout
           android:layout_width="wrap_content"
           android:layout_height="wrap_content" >
           
           <Button
             android:id="@+id/btnClose"
             style="?android:attr/buttonStyleSmall"
             android:layout_width="59dp"
             android:layout_height="44dp"
            
             android:paddingLeft="10dp"
             android:text="@string/exit" />
           
           <Button
             android:id="@+id/btnNext"
             style="?android:attr/buttonStyleSmall"
             android:layout_width="59dp"
             android:layout_height="44dp"
            
             android:paddingLeft="10dp"
             android:text="@string/next" />
       </LinearLayout> 
  </LinearLayout>

   </ScrollView>
