<?xml version="1.0" encoding="utf-8"?>
   <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
       android:layout_width="fill_parent"
       android:layout_height="fill_parent"
       android:padding="10dp"
       android:orientation="vertical" >

       <TextView
           android:id="@+id/textView1"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_gravity="center_horizontal"
           android:drawableTop="@drawable/ic_launcher"
           android:padding="5dp"
           android:text="@string/options" />

       <LinearLayout
           android:layout_width="fill_parent"
           android:layout_height="wrap_content"
           android:orientation="vertical" >

           <TextView
               android:id="@+id/textView2"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="@string/i_pray"
               android:textAppearance="?android:attr/textAppearanceMedium" />
       </LinearLayout>

       <LinearLayout
           android:layout_width="fill_parent"
           android:layout_height="wrap_content"
           android:orientation="horizontal" >

           <EditText
               android:id="@+id/editText1"
               android:layout_width="0dp"
               android:layout_height="wrap_content"
               android:layout_weight="1"
               android:ems="10"
               android:inputType="textMultiLine"
               android:minHeight="80dp" >
           </EditText>
       </LinearLayout>
       <LinearLayout
           android:layout_width="fill_parent"
           android:layout_height="wrap_content"
           android:orientation="horizontal" >

           <TextView
           android:id="@+id/textView3"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="@string/tags:"
           android:textAppearance="?android:attr/textAppearanceMedium" />

           <EditText
               android:layout_width="0dp"
    			android:layout_height="wrap_content"
			   android:layout_weight="1"
			     android:inputType="textMultiLine"
			    android:maxLength="2">

             
           </EditText>

           <Button
               android:id="@+id/button1"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="@string/add" />
             <Button
               android:id="@+id/button2"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="@string/save" />

       </LinearLayout>
       <LinearLayout
           android:layout_width="fill_parent"
           android:layout_height="wrap_content"
           android:orientation="vertical" >

           <TextView
               android:id="@+id/textView7"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="@string/i_am_thankful"
               android:layout_marginTop="10dp"
               android:textAppearance="?android:attr/textAppearanceMedium" />
       </LinearLayout>

       <LinearLayout
           android:layout_width="fill_parent"
           android:layout_height="wrap_content"
           android:orientation="horizontal" >

           <EditText
               android:id="@+id/editText2"
               android:layout_width="0dp"
               android:layout_height="wrap_content"
               android:layout_weight="1"
               android:ems="10"
               android:inputType="textMultiLine"
               android:minHeight="80dp" >
           </EditText>
       </LinearLayout>
       <LinearLayout
           android:layout_width="fill_parent"
           android:layout_height="wrap_content"
           android:orientation="horizontal" >

           <TextView
           android:id="@+id/textView5"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="@string/tags:"
           android:textAppearance="?android:attr/textAppearanceMedium" />

           <EditText
               android:layout_width="0dp"
    			android:layout_height="wrap_content"
			   android:layout_weight="1"
			     android:inputType="textMultiLine"
			    android:maxLength="2">

             
           </EditText>

           <Button
               android:id="@+id/button4"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="@string/add" />
             <Button
               android:id="@+id/button5"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="@string/save" />

       </LinearLayout>

      <Button
             android:id="@+id/btnClose"
             style="?android:attr/buttonStyleSmall"
             android:layout_width="59dp"
             android:layout_height="44dp"
             android:paddingLeft="10dp"
             android:text="@string/close" />

   </LinearLayout>
