<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:background="@drawable/rounded_edges"
    android:layout_height="fill_parent" >

	<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
   		xmlns:tools="http://schemas.android.com/tools"
    	android:layout_width="match_parent"
    	android:layout_height="wrap_content"
    	android:orientation="vertical"
   		tools:context=".ScreenTwo" >
    
    	<LinearLayout
        	android:layout_width="wrap_content" 
        	android:layout_height="wrap_content"
        	android:orientation="horizontal" >
        
		    <TextView
		        android:id="@+id/textView1"
		        android:layout_width="wrap_content"
		        android:layout_height="fill_parent"
		       	android:layout_weight="1"
		        android:layout_margin="24dp"
		        android:text="@string/the_prayer_jar_was_created"
		        android:textAppearance="?android:attr/textAppearanceLarge" />
    
		     <QuickContactBadge
		         android:id="@+id/quickContactBadge2"
		         android:layout_width="200dp"
		         android:layout_height="200dp"
		         android:layout_marginRight="24dp"
		         android:layout_weight="1"
		         android:src="@drawable/placeholder" />
         
    	</LinearLayout>	
    
    	<LinearLayout
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:orientation="horizontal" >

        		<QuickContactBadge
        		    android:id="@+id/quickContactBadge1"
        		    android:layout_width="200dp"
        		    android:layout_height="200dp"
        		    android:layout_marginLeft="24dp"
        		    android:layout_weight="1"
        		    android:src="@drawable/placeholder" />

		        <TextView
		            android:id="@+id/textView3"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		           	android:layout_weight ="1"
		            android:layout_marginRight="24dp"
		            android:layout_marginLeft="24dp"
		            android:paddingBottom="5dp"
		            android:text="@string/later_you_will"
		            android:textAppearance="?android:attr/textAppearanceLarge" />
    	</LinearLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="28dp"
        android:layout_marginTop="28dp"
       
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/vwNext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_marginRight="28dp"
            android:text="@string/next"
            android:textAppearance="?android:attr/textAppearanceMedium" />
    </RelativeLayout>


</LinearLayout>

</ScrollView>